discussion/kv_engine/174861/174861_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

[WIP] MB-52080: Add test coverage for allocator-based stats

Change-Id: If11b8fd7f03d74ff90a11b57d6d74ca79aadf833

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-05-19 14:28:37.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-19 14:31:45.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16604/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/module_tests/storeddockey_test.cc b/engines/ep/tests/module_tests/storeddockey_test.cc
index d49a45591..34f225ca7 100644
--- a/engines/ep/tests/module_tests/storeddockey_test.cc
+++ b/engines/ep/tests/module_tests/storeddockey_test.cc
@@ -12,8 +12,8 @@
 
 #include &lt;folly/portability/GTest.h&gt;
 #include &lt;mcbp/protocol/unsigned_leb128.h&gt;
-#include &lt;map&gt;
 #include &lt;platform/memory_tracking_allocator.h&gt;
+#include &lt;map&gt;
 
 class StoredDocKeyTest : public ::testing::TestWithParam&lt;CollectionID&gt; {};
 

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16604/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17582/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/memory_tracking_allocator.h:107:14: error: no member named "cout" in namespace "std" [clang-diagnostic-error]
        std::cout << "Allocating " + std::to_string(n * sizeof(T)) << std::endl;
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/memory_tracking_allocator.h:113:14: error: no member named "cout" in namespace "std" [clang-diagnostic-error]
        std::cout << "Deallocating " + std::to_string(n * sizeof(T))
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17582/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/memory_tracking_allocator.h:107:14:
error: no member named "cout" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17582/ )
----------------------------------------------------------------------------------------------------------------------
